--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,31 +13,30 @@
   "dir": "ltr",
   "icons": [
     {
-      "src": "/favicon.ico",
-      "sizes": "16x16 32x32 48x48",
-      "type": "image/x-icon"
+      "src": "/icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any"
     },
     {
-      "src": "/favicon.ico",
+      "src": "/favicon.svg",
+      "sizes": "32x32",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/icon.svg",
       "sizes": "192x192",
-      "type": "image/x-icon",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "/favicon.ico",
+      "src": "/icon.svg",
       "sizes": "512x512",
-      "type": "image/x-icon",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     }
   ],
-  "screenshots": [
-    {
-      "src": "/favicon.ico",
-      "sizes": "1280x720",
-      "type": "image/x-icon",
-      "form_factor": "wide"
-    }
-  ],
+  "screenshots": [],
   "permissions": ["notifications"],
   "features": ["Cross Platform", "fast", "simple"]
 }
